# mpm-optimization

./: .clang-format  CMakeLists.txt  LICENSE.txt
.github/workflows/: build_and_test.yml
src/: Interp.hpp  LBFGS.hpp  MPM.cpp  MPM.hpp  Particle.hpp  Solver.cpp  Solver.hpp
test/: solver.cpp  sphere.cpp
